Observation map fixes including css fix for removing vertical scrollbar from leaflet pages

--- a/www/custom.css
+++ b/www/custom.css
@@ -773,8 +773,15 @@
           But then it won't work if the class changes for different use cases
         */
 
+        #density_map_primary-map_display,
+        #density_map_comparative-map_display {
+          height: calc(100vh - 210px) !important;
+        }
 
-        /*.leaflet { height: calc(100vh - 150px) !important; } */
+        #density_playback_map-map_display,
+        #observation_map-map_display {
+          height: calc(100vh - 320px) !important;
+        }
         /*
         #playback_map { height: calc(100vh - 120px) !important; }
         #explorer_map { height: calc(100vh - 120px) !important; }
